# generative-pixel-art

./: .gitignore  README.md  pyproject.toml
gen_pixel_art/: cli.py  colors.py  generate.py  grid.py  main.py  mesh.py  prepreccessing.py  resolution_finder.py  utils.py
pixel_contraction/: prepreccess_data.py  resolution_finder.py
proper_pixel_art/: cli.py  colors.py  generate.py  mesh.py  pixelate.py  utils.py
