[project]
name = "gen_pixel_art"
version = "0.1.0"
description = "Converts text-to-art generated 'pixel' art from LLMs to true resolution pixel art assets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pillow>=11.1.0",
    "scipy>=1.15.2",
]
packages = [
    { include = "gen_pixel_art" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
